fix(deepresearch): fix the issue where subsequent nodes were unable to obtain background_investation_desult