@@ -59,10 +59,16 @@ public class BackgroundInvestigationNode implements BackgroundInvestigationNodeA
 		String query = lastMessage.getText();
 		TavilySearchService.Response response = tavilySearchService
 			.apply(TavilySearchService.Request.simpleQuery(query));
-		List<TavilySearchService.SearchContent> results = response.results()
+		List<Map<String, String>> results = response.results()
 			.stream()
-			.map(info -> new TavilySearchService.SearchContent(info.title(), info.content()))
-			.toList();
+			.map(info -> {
+				Map<String, String> result = new HashMap<>();
+				result.put("title", info.title());
+				result.put("content", info.content());
+				logger.info("处理搜索结果: {}", result);
+				return result;
+			})
+			.collect(Collectors.toList());
 		logger.info("✅ 搜索结果: {}", results);
 
 		Map<String, Object> resultMap = new HashMap<>();
